@@ -4,6 +4,10 @@ package SPVM::Time {
   native sub time : long ();
   native sub localtime : SPVM::Time::Info ($time : long);
   native sub gmtime : SPVM::Time::Info ($time : long);
+  
+  # Note: Time zone is not supported
   native sub strptime : SPVM::Time::Info ($str : string, $format : string);
+
+  # Note: Time zone is not supported
   native sub strftime : string ($format : string, $time_info : SPVM::Time::Info);
 }
