@@ -64,6 +64,11 @@ my $start_memory_blocks_count = SPVM::memory_blocks_count();
   ok(TestCase::Lib::SPVM::Time->test_strptime);
 }
 
+# strptime
+{
+  ok(TestCase::Lib::SPVM::Time->test_strftime);
+}
+
 # All object is freed
 my $end_memory_blocks_count = SPVM::memory_blocks_count();
 is($end_memory_blocks_count, $start_memory_blocks_count);
